tests/kyverno-policies/namespace-role/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespace-role
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: namespace-role
    rule: require-role
    resources:
      - user-test
      - default
      - kube-system
    kind: Namespace
    result: skip
  - policy: namespace-role
    rule: require-role
    resources:
      - test-ondemand
      - test-infrastructure
      - test-webservice
      - test-paas
      - test-kubevirt
    kind: Namespace
    result: pass
  - policy: namespace-role
    rule: require-role
    resources:
      - test-fail
    kind: Namespace
    result: fail
